# CPU_Usage_Tracker

./: .gitignore  CMakeLists.txt  README.md
inc/: analyzer.h  logger.h  main.h  printer.h  reader.h  watchdog.h
src/: analyzer.c  logger.c  main.c  printer.c  reader.c  watchdog.c
